--- a/agent-core/requirements.txt
+++ b/agent-core/requirements.txt
@@ -66,5 +66,6 @@ typing-inspection==0.4.1
 typing_extensions==4.13.2
 urllib3==2.4.0
 uvicorn==0.34.2
+websockets==12.0
 wrapt==1.17.2
 yarl==1.20.0
